tests/base/parser/bad/stmts_t-id-with.scilla
scilla_version 0

contract Test
()

field true : Bool = True
field a : Bool = False

transition arbitrary ()
 (* can't have delete after an id *)
 true _more delete
end
